syntax = "proto3";
package commerce;
option java_package = "com.ferza17.ecommercemicroservicesv2.v1.commerce";

import "google/protobuf/timestamp.proto";

message CartItem {
  string id = 1;
  string productId = 2;
  string userId = 3;
  int32 qty = 4;
  double price = 5;
  google.protobuf.Timestamp crated_at = 6;
  google.protobuf.Timestamp updated_at = 7;
}

message WishlistItem {
  string id = 1;
  string productId = 2;
  string userId = 3;
}